--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -14,9 +14,9 @@ jobs:
       uses: actions/checkout@v2
 
     - name: Set up Java
-      uses: actions/setup-java@v2
-      with:
-        java-version: '11'
+      run: |
+        echo "JAVA_HOME=C:\Program Files\Java\jdk-11" >> $GITHUB_ENV
+        echo "PATH=$JAVA_HOME/bin:$PATH" >> $GITHUB_ENV
 
     - name: Build and package
       run: |
