--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -18,6 +18,11 @@ jobs:
         echo "JAVA_HOME=C:\Program Files\Java\jdk-11" >> $GITHUB_ENV
         echo "PATH=$JAVA_HOME/bin:$PATH" >> $GITHUB_ENV
 
+    - name: Generate Gradle Wrapper
+      run: |
+        # Generate the Gradle wrapper script
+        ./gradlew wrapper
+
     - name: Build and package
       run: |
         ./gradlew build
